# thales-feishu-public-doc-exporte

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
feishu_doc_exporter/: __init__.py  cli.py  client.py  public_web.py  rendering.py
skills/thales-feishu-public-doc-exporte/: SKILL.md
skills/thales-feishu-public-doc-exporte/scripts/: export_feishu_doc.sh
tests/: test_parsing.py
